Customized for Azure
* Downgraded to Java 11