@@ -8,6 +8,7 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Repository
@@ -32,7 +33,7 @@ public class HuddleRepositoryDataJdbcAdapter implements HuddleRepository {
         return StreamSupport.stream(
                 huddleJdbcRepository.findAll().spliterator(), false)
                             .map(HuddleEntity::asHuddle)
-                            .toList();
+                            .collect(Collectors.toList());
     }
 
     @Override
